--- a/.gitignore
+++ b/.gitignore
@@ -1,45 +1,10 @@
-# See http://help.github.com/ignore-files/ for more about ignoring files.
+Idee:
+- Creare un'iframe con dentro una parte della pagina dedica a una specifica skill. Per esempio mostrare un piccolo script in php dentro all'iframe.
+    <iframe id="inlineFrameExample" title="Inline Frame Example"
+      width="300"
+      height="200"
+      src="https://valeriodellefave.github.io/">
+    </iframe>
 
-# compiled output
-/dist
-/tmp
-/out-tsc
-# Only exists if Bazel was run
-/bazel-out
 
-# dependencies
-/node_modules
 
-# profiling files
-chrome-profiler-events*.json
-
-# IDEs and editors
-/.idea
-.project
-.classpath
-.c9/
-*.launch
-.settings/
-*.sublime-workspace
-
-# IDE - VSCode
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-.history/*
-
-# misc
-/.sass-cache
-/connect.lock
-/coverage
-/libpeerconnection.log
-npm-debug.log
-yarn-error.log
-testem.log
-/typings
-
-# System Files
-.DS_Store
-Thumbs.db
