--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "portfolio",
+  "name": "ValeriodelleFave.github.io",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "buildApp": "ng build --prod --base-href 'https://valeriodellefave.github.io/'",
+    "deployApp": "npx angular-cli-ghpages --dir=dist/ValeriodelleFave.github.io"
   },
   "private": true,
   "dependencies": {
