--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "portfolio",
+  "name": "ValeriodelleFave.github.io",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "buildApp": "ng build --prod --base-href 'https://valeriodellefave.github.io/'",
+    "deployApp": "npx angular-cli-ghpages --dir=dist/ValeriodelleFave.github.io"
   },
   "private": true,
   "dependencies": {
@@ -31,6 +33,7 @@
     "@angular/compiler-cli": "~12.2.0",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
+    "angular-cli-ghpages": "^1.0.0",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
