--- a/angular.json
+++ b/angular.json
@@ -68,10 +68,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "ValeriodelleFave.github.io:build:production"
+              "browserTarget": "valeriodellefave-portfolio:build:production"
             },
             "development": {
-              "browserTarget": "ValeriodelleFave.github.io:build:development"
+              "browserTarget": "valeriodellefave-portfolio:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -79,7 +79,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "ValeriodelleFave.github.io:build"
+            "browserTarget": "valeriodellefave-portfolio:build"
           }
         },
         "test": {
@@ -105,5 +105,5 @@
       }
     }
   },
-  "defaultProject": "ValeriodelleFave.github.io"
+  "defaultProject": "valeriodellefave-portfolio"
 }
