--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "build-prod": "ng build --prod --base-href 'https://valeriodellefave.github.io/'",
+    "build-prod": "ng build --prod --base-href ./",
     "deploy": "npx angular-cli-ghpages --dir=dist/docs"
   },
   "private": true,
